# 15-418-final-project

./: .gitattributes  .gitignore  README.md  changelog.txt  environment.yml  export_nsys_to_sqlite.sh  pyproject.toml  requirements.txt
configs/: solo_mistral7b.yaml  solo_template.yaml
configs/multitenant/: 10_distilgpt2.yaml  2_llama_1_mistral.yaml  3_deberta_1_llama.yaml  3_deberta_2_disitlgpt2.yaml  3_distilgpt2.yaml  3_distilgpt2_mistral7b.yaml  3_llama.yaml  3_roberta_1_llama.yaml  3_roberta_2_distilgpt2.yaml  4_distilbert_1_mistral.yaml  4_distilgpt2.yaml  5_distilgpt2_llama.yaml  all_models.yaml  bert_deberta.yaml  bert_roberta.yaml  distilbert_gpt2.yaml  distilbert_llama.yaml  distilbert_mistral.yaml  distilgpt2_mistral7b.yaml  gpt2_llama.yaml  llama_mistral7b.yaml  mistral_llama_disitlgpt2.yaml  mps_distilgpt2_mistral7b.yaml  mps_pair_distilgpt2.yaml  multitenant_template.yaml  nomps_pair_distilgpt2.yaml  pair_deberta.yaml  pair_distilbert.yaml  pair_distilgpt2.yaml  pair_llama.yaml  pair_mistral7b.yaml  pair_roberta.yaml
configs/solo/: solo_RoBERTa.yaml  solo_deBERT.yaml  solo_deBERTa.yaml  solo_distilBERT.yaml  solo_distilgpt2.yaml  solo_distilgpt2_smallbatch.yaml  (+4 more)
docs/: _config.yml  analyzer-guide.md  final.md  index.md  milestone.md  proposal.md
notebooks/: analysis.ipynb  data_analysis.ipynb
scripts/: bench_all_multitenants.sh  bench_all_solo.sh  bench_multitenants.py  bench_single_model.py  conda_setup.sh  nsys_extract_stats.sh  nsys_setup.sh  pip_setup.sh  profile_all_multitenants.sh  profile_all_solo.sh  profile_multitenants.sh  test_gpu.py
(+321 files in other folders)
